--- a/servicio-cursos.yml
+++ b/servicio-cursos.yml
@@ -6,6 +6,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+    registerWithEureka: true 
   instance:
      instance-id: instancia3
 server:
