--- a/servicio-cursos.yml
+++ b/servicio-cursos.yml
@@ -5,5 +5,12 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
     registerWithEureka: true 
+    
+spring:
+    mvc:
+    pathmatch:
+      matching-strategy: ant-path-matcher
 
-  
+  h2:
+    console:
+      enabled: true
